@@ -38,6 +38,9 @@ Switched to GForge bug numbering as of iRODS2.5
 ********
 
  [#112] [iROD-Chat:5741] (Jargon) IRODSFile.setResource(...) is limited 300 resources
+ 
+ [#147] SQL incorrect for gen query associated with '<=' or '>=' or '<' or '>' comparisons
+ 
 ================================================================================================
 Outstanding Issues
 
